feat: 在服务器生成 PDF 并直接下载
